# BitLA

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  minerconfigdialog.cpp  minerconfigdialog.h
